--- a/app/src/main/res/layout/activity_lol.xml
+++ b/app/src/main/res/layout/activity_lol.xml
@@ -13,7 +13,7 @@
         android:background="@color/blue" />
 
     <ListView
-        android:id="@+id/playlist"
+        android:id="@+id/lol"
         android:layout_marginTop="20dp"
         android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
