--- a/app/src/main/res/layout/controller_fragment.xml
+++ b/app/src/main/res/layout/controller_fragment.xml
@@ -50,5 +50,24 @@
             android:layout_height="wrap_content"
             android:text="@string/stop" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/last"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/last" />
+
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/next" />
+    </LinearLayout>
 </LinearLayout>
 
