--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,21 +13,26 @@
         android:layout_height="wrap_content"
         android:background="@color/blue" />
 
-    <ListView
-        android:id="@+id/playlist"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </ListView>
 
     <include
         layout="@layout/controller_fragment"
+        android:id="@+id/control"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_alignParentBottom="true" >
     </include>
+
+    <fragment
+        android:id="@+id/playlist_fragment"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/toolbar"
+        android:layout_above="@id/control"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.github.tiiime.lplayer.fragment.PlaylistFragment"
+        tools:layout="@layout/fragment_playlist">
+    </fragment>
 
 </RelativeLayout>
 
