todo:添加音乐到播放列表

--- a/app/src/main/res/layout/activity_lol.xml
+++ b/app/src/main/res/layout/activity_lol.xml
@@ -12,21 +12,22 @@
         android:layout_height="wrap_content"
         android:background="@color/blue" />
 
-    <ListView
-        android:id="@+id/lol"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </ListView>
-
     <include
         layout="@layout/controller_fragment"
+        android:id="@+id/control"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_alignParentBottom="true" >
     </include>
+
+    <ListView
+        android:id="@+id/lol"
+        android:layout_above="@id/control"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
 
 </RelativeLayout>
 
