--- a/app/src/main/res/layout/dialog_create_playlist.xml
+++ b/app/src/main/res/layout/dialog_create_playlist.xml
@@ -3,14 +3,33 @@
     android:orientation="vertical"
     android:layout_width="280dip"
     android:layout_height="wrap_content"
+    android:background="#fff"
     android:layout_gravity="center" >
+    <View
+        android:background="#efefef"
+        android:layout_width="match_parent"
+        android:layout_height="40dip" />
 
     <EditText
         android:id="@+id/input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/submit"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/cancel"
+            android:text="@string/cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/submit"
+            android:text="@string/submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 </LinearLayout>
