--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,38 +1,35 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
+    android:background="@color/material_blue_grey_800"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
+    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/blue" />
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/transparent"
+        app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
 
-
-    <include
-        layout="@layout/controller_fragment"
+    <fragment
         android:id="@+id/control"
-        android:layout_height="wrap_content"
+        android:name="com.github.tiiime.lplayer.fragment.ControlFragment"
         android:layout_width="match_parent"
-        android:layout_alignParentBottom="true" >
-    </include>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        tools:layout="@layout/fragment_control" />
 
     <fragment
         android:id="@+id/playlist_fragment"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/toolbar"
-        android:layout_above="@id/control"
+        android:name="com.github.tiiime.lplayer.fragment.PlaylistFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.github.tiiime.lplayer.fragment.PlaylistFragment"
-        tools:layout="@layout/fragment_playlist">
-    </fragment>
+        android:layout_above="@id/control"
+        android:layout_below="@id/toolbar"
+        tools:layout="@layout/fragment_playlist" />
 
 </RelativeLayout>
 
