--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,4 +4,7 @@
         android:orderInCategory="100" android:showAsAction="never" />
     <item android:id="@+id/action_playlist" android:title="@string/action_playlist"
         android:orderInCategory="100" android:showAsAction="never" />
+    <item android:id="@+id/add_to_playlist" android:title="@string/add_to_list"
+        android:orderInCategory="100" android:showAsAction="never" />
+
 </menu>
