--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -7,6 +7,7 @@
 
     <LinearLayout
         android:orientation="horizontal"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -20,9 +21,17 @@
             android:layout_weight="1"
             android:id="@+id/time"
             android:text="time"
+            android:gravity="center"
             android:textColor="#000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+        <Spinner
+            android:id="@+id/mode"
+            android:spinnerMode="dialog"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
     <LinearLayout
